<resources>
    <string name="app_name">Calculator</string>
    <string name="app_title">DellPogie Basic Calc</string>
    <string name="result">0.00</string>
    <integer name="b1">1</integer>
    <integer name="b2">2</integer>
    <integer name="b3">3</integer>
    <integer name="b4">4</integer>
    <integer name="b5">5</integer>
    <integer name="b6">6</integer>
    <integer name="b7">7</integer>
    <integer name="b8">8</integer>
    <integer name="b9">9</integer>
    <integer name="b0">0</integer>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">x</string>
    <string name="divide">/</string>
    <string name="negate">+/-</string>
    <string name="percent">%</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
</resources>