<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/strAppTitle"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="1sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="1sp"
            android:layout_marginBottom="5sp"
            android:background="@color/black"
            android:maxLines="1"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:fontFamily="sans-serif-medium"
            android:textSize="36sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">
        <TextView
            android:id="@+id/txvResult"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="5sp"
            android:background="@color/black"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="65sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <Button
            android:id="@+id/btnClear"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btnNegate"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/negate"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Button
            android:id="@+id/btnPercent"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/orange"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
        <Button
            android:id="@+id/btn7"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b7"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btn8"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b8"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btn9"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b9"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/orange"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
        <Button
            android:id="@+id/btn4"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b4"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btn5"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b5"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btn6"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b6"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/orange"
            android:text="@string/times"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
        <Button
            android:id="@+id/btn1"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b1"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b2"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btn3"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b3"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/orange"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
        <Button
            android:id="@+id/btn0"
            android:layout_width="170sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@integer/b0"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/dark_gray"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="35sp" />
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="85sp"
            android:layout_height="85sp"
            android:backgroundTint="@color/orange"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <EditText
            android:id="@+id/txtMathLog"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginLeft="45sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="45sp"
            android:layout_marginBottom="5sp"
            android:background="@color/black"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/light_gray"
            android:fontFamily="sans-serif-medium"
            android:textSize="25sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>